dynamix/force-app/main/default/objects/Bank_Loan_Details__c/Bank_Loan_Details__c.object-meta.xml
<CustomObject>
    <label>Bank Loan Details</label>
    <nameField>
        <displayFormat>BLD-{00000}</displayFormat>
        <label>Bank Loan Details  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Loan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>