dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Bank_NOC_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_NOC_Date__c</fullName>
    <label>Builder NOC Date</label>
    <type>Date</type>
</CustomField>