dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Bank_Returned_ROC_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Bank_Returned_ROC_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Returned ROC Uploaded</label>
    <type>Checkbox</type>
</CustomField>