dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Bankers_Contact_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Bankers_Contact_Phone_No__c</fullName>
    <label>Bankers Contact Phone No</label>
    <type>Phone</type>
</CustomField>