dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Branch_Banker_Email__c.field-meta.xml
<CustomField>
    <fullName>Branch_Banker_Email__c</fullName>
    <label>Branch Banker Email</label>
    <type>Email</type>
</CustomField>