dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/First_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Disbursement_Date__c</fullName>
    <label>First Disbursement Date</label>
    <type>Date</type>
</CustomField>