dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/First_Disbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>First_Disbursement_Status__c</fullName>
    <label>First Disbursement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Disburse</fullName>
            </value>
            <value>
                <fullName>Not Disburse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>