dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Home_Loan_Institution__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan_Institution__c</fullName>
    <label>Home Loan Institution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State Bank of India</fullName>
            </value>
            <value>
                <fullName>Union Bank of India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>