dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Home_loan_institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Home_loan_institution_Name__c</fullName>
    <formula>Home_LoanInstitution__r.Name</formula>
    <label>Home loan institution Name</label>
    <type>Text</type>
</CustomField>