dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Home_Loan_Representative__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan_Representative__c</fullName>
    <label>Home Loan Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>