dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Home_LoanInstitution__c.field-meta.xml
<CustomField>
    <fullName>Home_LoanInstitution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Loan Institution</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Bank Loan Details</relationshipLabel>
    <relationshipName>Bank_Loan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>