dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Loan_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_ID__c</fullName>
    <label>Loan Application ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>