dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Loan_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Closed_Date__c</fullName>
    <label>Loan Closed Date</label>
    <type>DateTime</type>
</CustomField>