dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Loan_Closure_Letter_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Loan_Closure_Letter_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Closure Letter Uploaded</label>
    <type>Checkbox</type>
</CustomField>