dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Loan_Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loan_Closure_Reason__c</fullName>
    <label>Loan Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenure Completed</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>