dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Loan_Reason_for_Closure__c.field-meta.xml
<CustomField>
    <fullName>Loan_Reason_for_Closure__c</fullName>
    <label>Loan Reason for Closure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>