dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Loan_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Loan_Remarks__c</fullName>
    <label>Loan Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>