dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Loan_Tenure_years__c.field-meta.xml
<CustomField>
    <fullName>Loan_Tenure_years__c</fullName>
    <label>Loan Tenure(years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>