dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Loan_Through__c.field-meta.xml
<CustomField>
    <fullName>Loan_Through__c</fullName>
    <label>Loan Through</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>DSA Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>