dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Pari_Passu__c.field-meta.xml
<CustomField>
    <fullName>Pari_Passu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pari Passu</label>
    <type>Checkbox</type>
</CustomField>