dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Pre_Sanction_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sanction_Date__c</fullName>
    <label>Pre Sanction Date</label>
    <type>Date</type>
</CustomField>