dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Processing_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fee_Amount__c</fullName>
    <label>Processing Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>