dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Processing_fees__c.field-meta.xml
<CustomField>
    <fullName>Processing_fees__c</fullName>
    <label>Processing Fees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>