dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Sanction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Amount__c</fullName>
    <label>Sanction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>