dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Sanction_Letter_Date__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Letter_Date__c</fullName>
    <label>Sanction Letter Date</label>
    <type>Date</type>
</CustomField>