dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Sanction_Letter_No_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Letter_No_File_Number__c</fullName>
    <label>Sanction Letter No/ File Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>