dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Sanction_percentage_of_AV1__c.field-meta.xml
<CustomField>
    <fullName>Sanction_percentage_of_AV1__c</fullName>
    <formula>TEXT(ROUND(( ( Booking__r.Agreement_Value__c / Sanction_Amount__c)/100 ),2))+&apos;%&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sanction % of AV</label>
    <type>Text</type>
</CustomField>