dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Sanction_percentage_of_AV__c.field-meta.xml
<CustomField>
    <fullName>Sanction_percentage_of_AV__c</fullName>
    <formula>(Booking__r.Agreement_Value__c /Sanction_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sanction percentage of AV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>