dynamix/force-app/main/default/objects/Bank_Loan_Details__c/fields/Sanction_Status__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Status__c</fullName>
    <label>Sanction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Sanctioned</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
                <isActive>false</isActive>
                <label>In Process</label>
            </value>
            <value>
                <fullName>Kit Handed Over</fullName>
                <isActive>false</isActive>
                <label>Kit Handed Over</label>
            </value>
            <value>
                <fullName>Sanction Letter Document</fullName>
                <isActive>false</isActive>
                <label>Sanction Letter Document</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>