dynamix/force-app/main/default/objects/Bank_Loan_Details__c/validationRules/Check_Sanction_Letter_Uploded.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Sanction_Letter_Uploded</fullName>
    <active>true</active>
    <errorConditionFormula>Sanction_Letter__c = false &amp;&amp; ISPICKVAL(Sanction_Status__c, &quot;Sanctioned&quot;)</errorConditionFormula>
    <errorMessage>You can not Change the Status Sanctioned, please attach the Sanction Letter.</errorMessage>
</ValidationRule>