dynamix/force-app/main/default/objects/Bank_Loan_Details__c/validationRules/Closed_Loan_not_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Loan_not_editable</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE( Loan_Status__c ), &apos;Closed&apos;),

    NOT(ISNEW())

)</errorConditionFormula>
    <errorMessage>Editing is not allowed when the Status is Closed.</errorMessage>
</ValidationRule>