dynamix/force-app/main/default/objects/Bank_Loan_Details__c/validationRules/MandateLoanReasonforClosureStatusSanctio.validationRule-meta.xml
<ValidationRule>
    <fullName>MandateLoanReasonforClosureStatusSanctio</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   OR(ISBLANK( Loan_Reason_for_Closure__c ) ,
      ISNULL(Loan_Reason_for_Closure__c ) 
   ),
   NOT(ISBLANK( Loan_Closed_Date__c ))
)</errorConditionFormula>
    <errorDisplayField>Loan_Reason_for_Closure__c</errorDisplayField>
    <errorMessage>Enter Value In  Loan Reason for Closure Field.</errorMessage>
</ValidationRule>