dynamix/force-app/main/default/objects/Bank_Loan_Details__c/validationRules/Pre_sanction_less_than_Current_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Pre_sanction_less_than_Current_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Pre_Sanction_Date__c &gt; Today()</errorConditionFormula>
    <errorDisplayField>Pre_Sanction_Date__c</errorDisplayField>
    <errorMessage>Pre-sanction date should be less than the Current date.</errorMessage>
</ValidationRule>